<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/fragmentStyle"
    android:orientation="vertical"
    tools:context=".fragments.RouteFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/routeInfoBoxStyle">

        <TextView
            android:id="@+id/routeNumberTw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/routeInfoTextViewStyle"
            android:text="@string/route_info_number"/>

        <TextView
            android:id="@+id/routeStartFactTw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/routeInfoTextViewStyle"
            android:text="@string/route_info_start"/>

        <TextView
            android:id="@+id/routeDistanceTw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/routeInfoTextViewStyle"
            android:text="@string/route_info_distance"/>

        <TextView
            android:id="@+id/routeFinishPlanTw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/routeInfoTextViewStyle"
            android:text="@string/route_info_finish"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/routeInfoBoxStyle">

        <TextView
            android:id="@+id/routeCurrentTimeTw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/routeInfoActualStyle"
            android:text="@string/route_info_current_time"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/routeInfoBoxStyle">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/routeInfoHeaderStyle"
            android:text="@string/route_info_waypoint_info"/>

        <TextView
            android:id="@+id/routeWaypointAddressTw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/routeInfoSuccessStyle"
            android:text="@string/route_info_waypoint_address"/>

        <TextView
            android:id="@+id/routeWaypointActionTw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/routeInfoSuccessStyle"
            android:text="@string/route_info_waypoint_type"/>

        <TextView
            android:id="@+id/routeWaypointCargoTw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/routeInfoSuccessStyle"
            android:text="@string/route_info_waypoint_cargo"/>

        <TextView
            android:id="@+id/routeWaypointFinishPlanTw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/routeInfoSuccessStyle"
            android:text="@string/route_info_waypoint_finish_plan"/>

    </LinearLayout>

</LinearLayout>