<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/numberTw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textAlignment="center"
            style="@style/waypointsListHeaderTextStyle"/>

        <View
            style="@style/verticalDeviderStyle"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/waypointsListHeaderTextStyle"
                    android:text="@string/waypoint_list_address"/>

                <TextView
                    android:id="@+id/addressTw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/waypointsListValueTextStyle" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/waypointsListHeaderTextStyle"
                    android:text="@string/waypoint_list_type"/>

                <TextView
                    android:id="@+id/typeTw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/waypointsListValueTextStyle" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/waypointsListHeaderTextStyle"
                    android:text="@string/waypoint_list_cargo"/>

                <TextView
                    android:id="@+id/cargoTw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/waypointsListValueTextStyle" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/waypointsListHeaderTextStyle"
                    android:text="@string/waypoint_list_status"/>

                <TextView
                    android:id="@+id/statusTw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/waypointsListValueTextStyle" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <View
        style="@style/deviderStyle"/>

</LinearLayout>